welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:18: error: ':' expected but ')' found.
def in16(day):Boolean = {
            ^alarmClock:36: error: identifier expected but '}' found.
 }
 ^